add todo filter function

--- a/todolist.html
+++ b/todolist.html
@@ -31,6 +31,12 @@
         <button class="add-btn">Add</button>
     </div>
 
+    <div class="filter-buttons">
+    <button onclick="setFilter('all')">All</button>
+    <button onclick="setFilter('active')">Active</button>
+    <button onclick="setFilter('completed')">Completed</button>
+    </div>
+
     <p class="counter"></p>
     <div class="todo-list"></div>
 
