add task counter to filter button

--- a/todolist.html
+++ b/todolist.html
@@ -32,9 +32,9 @@
     </div>
 
     <div class="filter-buttons">
-    <button onclick="setFilter('all')">All</button>
-    <button onclick="setFilter('active')">Active</button>
-    <button onclick="setFilter('completed')">Completed</button>
+    <button class="all-filter-btn" onclick="setFilter('all')"></button>
+    <button class="active-filter-btn"onclick="setFilter('active')"></button>
+    <button class="completed-filter-btn"onclick="setFilter('completed')"></button>
     </div>
 
     <p class="counter"></p>
