--- a/todolist.html
+++ b/todolist.html
@@ -39,6 +39,7 @@
 
     <p class="counter"></p>
     <div class="todo-list"></div>
+    <div class="clear-all-div"></div>
 
     <script src="scripts/scripts.js"></script>
 </body>
