add hover and active state for each elements

--- a/todolist.html
+++ b/todolist.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Focus. Todo List</title>
 
+    <link rel="icon" type="image/png" href="styles/assets/focus-icon (1).png">
+
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -48,7 +50,7 @@
 
 
         <p class="counter"></p>
-        <div class="todo-list"></div>
+        <div class="todo-list-div"></div>
         <hr class="grey-line-divider bottom-divider">
 
         <div class="clear-all-div"></div>
